--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@arcjet/inspect": "^1.0.0-beta.5",
     "@arcjet/next": "^1.0.0-beta.5",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
@@ -21,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "dropdown-menu": "^0.1.1",
     "jose": "^6.0.10",
     "lucide-react": "^0.488.0",
     "mongodb": "^6.15.0",
